created separate exportable types to be used by API and frontend
